# sagrada-linter

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  README.md  SCOPE_OF_CERTIFICATION.md  action.yml  pyproject.toml  test_conformance.py
.github/workflows/: ci.yml  dogfood.yml
docs/: GITHUB_ACTION.md
examples/receipts/: README.md  agents-md-coherent.er1.json
sagrada_linter/: __init__.py  canonical.py  cli.py  conflict.py  decision.py  diff_pairing.py  er1_verify.mjs  er1_verify.py  gitwalk.py  golden_vectors.json  linter_receipt.py  md_claims.py  preflight.py  receipt.py  scanner.py  terms.py  vitals.py
tests/: test_cli_false_pass.py  test_vitals.py
