[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sagrada-linter"
version = "0.2.0"
description = "Catch zombie prompts — retracted AI rules that crept back into your .cursorrules / CLAUDE.md / AGENTS.md — with a verifiable receipt."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Mars Ausili", email = "mars@cruxia.ai" }]
keywords = ["ai", "agents", "cursorrules", "linter", "pre-commit", "prompt", "coherence"]
dependencies = ["cryptography>=41"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/Cruxia-Labs/sagrada-linter"
Repository = "https://github.com/Cruxia-Labs/sagrada-linter"
Issues = "https://github.com/Cruxia-Labs/sagrada-linter/issues"

[project.scripts]
sagrada-linter = "sagrada_linter.cli:main"

[tool.setuptools]
packages = ["sagrada_linter"]

[tool.setuptools.package-data]
# er1_verify.py is a package module (auto-included); listed explicitly so the bundled-verifier
# guarantee is visible in the manifest and not mistaken for missing.
sagrada_linter = ["er1_verify.py", "er1_verify.mjs", "golden_vectors.json"]
